--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <html lang="en-us">
 
 <head>
+	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 	<!-- DEVICONS -->
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	
@@ -93,7 +94,7 @@
 						Front End
 					</div>
 					<!-- THE FIRST ROW -->
-					<div class="col-xs-6 bottomPadding">
+					<div class="col-xs-3 col-xs-offset-3 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-html5-plain devIcons"></i>
 						</div>
@@ -101,7 +102,7 @@
 							HTML 5
 						</div>
 					</div>
-					<div class="col-xs-6 bottomPadding">
+					<div class="col-xs-3 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-css3-plain devIcons"></i>
 						</div>
@@ -110,7 +111,7 @@
 						</div>
 					</div>
 					<!-- THE SECOND ROW -->
-					<div class="col-xs-6">
+					<div class="col-xs-3 col-xs-offset-3 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-jquery-plain devIcons"></i>
 						</div>
@@ -118,7 +119,7 @@
 							jQuery
 						</div>
 					</div>
-					<div class="col-xs-6">
+					<div class="col-xs-3 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-bootstrap-plain devIcons"></i>
 						</div>
@@ -134,7 +135,7 @@
 						Back End
 					</div>
 					<!-- THE FIRST ROW -->
-					<div class="col-xs-6 bottomPadding">
+					<div class="col-xs-3 col-xs-offset-3 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-rails-plain devIcons"></i>
 						</div>
@@ -142,7 +143,7 @@
 							Rails
 						</div>
 					</div>
-					<div class="col-xs-6 bottomPadding">
+					<div class="col-xs-3 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-postgresql-plain devIcons"></i>
 						</div>
@@ -151,7 +152,7 @@
 						</div>
 					</div>
 					<!-- THE SECOND ROW -->
-					<div class="col-xs-6">
+					<div class="col-xs-3 col-xs-offset-3 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-redis-plain devIcons"></i>
 						</div>
@@ -159,7 +160,7 @@
 							Redis
 						</div>
 					</div>
-					<div class="col-xs-6">
+					<div class="col-xs-3 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-mysql-plain devIcons"></i>
 						</div>
@@ -174,7 +175,7 @@
 						Tools
 					</div>
 					<!-- THE FIRST ROW -->
-					<div class="col-xs-6 bottomPadding">
+					<div class="col-xs-3 col-xs-offset-3 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-git-plain devIcons"></i>
 						</div>
@@ -182,7 +183,7 @@
 							Git
 						</div>
 					</div>
-					<div class="col-xs-6 bottomPadding">
+					<div class="col-xs-3 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-heroku-original devIcons"></i>
 						</div>
@@ -191,7 +192,7 @@
 						</div>
 					</div>
 					<!-- THE SECOND ROW -->
-					<div class="col-xs-6">
+					<div class="col-xs-3 col-xs-offset-3 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-sass-original devIcons"></i>
 						</div>
@@ -199,7 +200,7 @@
 							Sass
 						</div>
 					</div>
-					<div class="col-xs-6">
+					<div class="col-xs-3 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-bitbucket-plain devIcons"></i>
 						</div>
