--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 	
 <meta charset="utf-8">
 <title>Hello...</title>
-<link rel="stylesheet" href="stylesxx.scss">
+<link rel="stylesheet" href="stylesx.scss">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <!-- jQuery library -->
@@ -46,7 +46,7 @@
 	</nav>
 	<div class="container-fluid mainContainer1">
 		<div class="row bigBox tan">
-			<div class="nameMe col-xs-4 col-xs-offset-2 text-center">
+			<div class="nameMe col-xs-12 col-md-4 col-md-offset-2 text-center">
 				<h1 id="moveIt">Dan Doughty</h1>
 				<h4>Ruby | Javascript | CSS | HTML</h4>
 				<div class="col-xs-12">
@@ -64,7 +64,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="profilePic" class="col-xs-4 text-center">
+			<div id="profilePic" class=" col-xs-12 col-md-4 text-center">
 				<img class="img-circle" src="https://image.ibb.co/kibQe5/IMG_0302.jpg" onload="$(this).fadeIn(1000);">
 			</div>
 		</div>
@@ -72,7 +72,7 @@
 		<div class="row bigBox2 teal">
 			<div class="col-xs-12 text-center">
 				<h1>About me</h1>
-				<div class="col-xs-8 col-xs-offset-2 aboutMe">
+				<div class="col-xs-12 col-xs-offset-0 col-md-8 col-md-offset-2 aboutMe">
 					Hi, my name is Daniel Doughty. I am a Full Stack Developer with a focus in Ruby on Rails. I have been
 					programming since 2015, when I first fell in love with Ruby. Since I have started, I have built two web
 					applications that are currently being used in production. 
@@ -94,7 +94,7 @@
 						Front End
 					</div>
 					<!-- THE FIRST ROW -->
-					<div class="col-xs-3 col-xs-offset-3 col-md-6 bottomPadding">
+					<div class="col-xs-5 col-xs-offset-1 col-md-offset-0 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-html5-plain devIcons"></i>
 						</div>
@@ -102,7 +102,7 @@
 							HTML 5
 						</div>
 					</div>
-					<div class="col-xs-3 col-md-6 bottomPadding">
+					<div class="col-xs-5 col md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-css3-plain devIcons"></i>
 						</div>
@@ -111,7 +111,7 @@
 						</div>
 					</div>
 					<!-- THE SECOND ROW -->
-					<div class="col-xs-3 col-xs-offset-3 col-md-6 bottomPadding">
+					<div class="col-xs-5 col-xs-offset-1 col-md-offset-0 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-jquery-plain devIcons"></i>
 						</div>
@@ -119,7 +119,7 @@
 							jQuery
 						</div>
 					</div>
-					<div class="col-xs-3 col-md-6 bottomPadding">
+					<div class="col-xs-5 col md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-bootstrap-plain devIcons"></i>
 						</div>
@@ -135,7 +135,7 @@
 						Back End
 					</div>
 					<!-- THE FIRST ROW -->
-					<div class="col-xs-3 col-xs-offset-3 col-md-6 bottomPadding">
+					<div class="col-xs-5 col-xs-offset-1 col-md-offset-0 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-rails-plain devIcons"></i>
 						</div>
@@ -143,7 +143,7 @@
 							Rails
 						</div>
 					</div>
-					<div class="col-xs-3 col-md-6 bottomPadding">
+					<div class="col-xs-5 col md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-postgresql-plain devIcons"></i>
 						</div>
@@ -152,7 +152,7 @@
 						</div>
 					</div>
 					<!-- THE SECOND ROW -->
-					<div class="col-xs-3 col-xs-offset-3 col-md-6 bottomPadding">
+					<div class="col-xs-5 col-xs-offset-1 col-md-offset-0 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-redis-plain devIcons"></i>
 						</div>
@@ -160,7 +160,7 @@
 							Redis
 						</div>
 					</div>
-					<div class="col-xs-3 col-md-6 bottomPadding">
+					<div class="col-xs-5 col md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-mysql-plain devIcons"></i>
 						</div>
@@ -175,7 +175,7 @@
 						Tools
 					</div>
 					<!-- THE FIRST ROW -->
-					<div class="col-xs-3 col-xs-offset-3 col-md-6 bottomPadding">
+					<div class="col-xs-5 col-xs-offset-1 col-md-offset-0 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-git-plain devIcons"></i>
 						</div>
@@ -183,7 +183,7 @@
 							Git
 						</div>
 					</div>
-					<div class="col-xs-3 col-md-6 bottomPadding">
+					<div class="col-xs-5 col md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-heroku-original devIcons"></i>
 						</div>
@@ -192,7 +192,7 @@
 						</div>
 					</div>
 					<!-- THE SECOND ROW -->
-					<div class="col-xs-3 col-xs-offset-3 col-md-6 bottomPadding">
+					<div class="col-xs-5 col-xs-offset-1 col-md-offset-0 col-md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-sass-original devIcons"></i>
 						</div>
@@ -200,7 +200,7 @@
 							Sass
 						</div>
 					</div>
-					<div class="col-xs-3 col-md-6 bottomPadding">
+					<div class="col-xs-5 col md-6 bottomPadding">
 						<div class="col-xs-12">
 							<i class="devicon-bitbucket-plain devIcons"></i>
 						</div>
@@ -213,7 +213,7 @@
 		</div>
 		<a name="portfolio"></a>
 		<div class="row bigBox2 orange">
-			<div class="col-xs-6 col-xs-offset-3 col-md-12 col-md-offset-0 text-center">
+			<div class="col-xs-12 text-center">
 				<h1 style="margin-bottom: 50px;">Portfolio</h1>
 				
 				<div class="col-md-6 col-xs-12" id="firstImage">
