--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 	
 <meta charset="utf-8">
 <title>Hello...</title>
-<link rel="stylesheet" href="stylesx.scss">
+<link rel="stylesheet" href="stylesxx.scss">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <!-- jQuery library -->
