change out weather app with calculator app

--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@
 					programming since 2015, when I first fell in love with Ruby. Since I have started, I have built two web
 					applications that are currently being used in production. 
 					<p></p>My favorite application is my Shopify App. It connects Shopify 
-					store owners to an automated order fulfillment service. Check it out at <a href="https://apps.shopify.com/apparelpop">ApparelPop!</a>
+					store owners to an automated order fulfillment service.
 					<p></p>My other web application is being used by a $1 billion company that automates their supply chain 
 					communication to the suppliers.
 				</div>
@@ -260,12 +260,12 @@
 				
 				<div class="col-md-6 col-xs-12">
 					<div class="col-xs-12 portTitle">
-						<a href="https://codepen.io/doughty/full/RZZYVd/" target="_blank">Weather Geolocation API</a>
+						<a href="https://codepen.io/doughty/full/wqjBKe/" target="_blank">Custom Calculator</a>
 					</div>
 					<div class="col-xs-12 webThumbnail">
-						<a href="https://codepen.io/doughty/full/RZZYVd/" target="_blank" class="linkWrap">
+						<a href="https://codepen.io/doughty/full/wqjBKe/" target="_blank" class="linkWrap">
 							<div class="blocker"></div>
-						<iframe class="5image" id="iframe_embed_undefined" name="pen-undefined" src="https://codepen.io/doughty/full/RZZYVd/" allowtransparency="true" frameborder="0" scrolling="no" sandbox="allow-scripts allow-pointer-lock allow-same-origin" style="opacity: 1;"></iframe>
+						<iframe class="5image" id="iframe_embed_undefined" name="pen-undefined" src="https://codepen.io/doughty/full/wqjBKe/" allowtransparency="true" frameborder="0" scrolling="no" sandbox="allow-scripts allow-pointer-lock allow-same-origin" style="opacity: 1;"></iframe>
 						</a>
 					</div>
 				</div>
