--- a/home.html
+++ b/home.html
@@ -236,12 +236,12 @@
 				
 				<div class="col-md-6 col-xs-12">
 					<div class="col-xs-12 portTitle">
-						<a href="https://codepen.io/doughty/full/WEjJgX/" target="_blank">Quote Generator API</a>
+						<a href="https://codepen.io/doughty/full/gxVRXd/" target="_blank">Simon Says Game</a>
 					</div>
 					<div class="col-xs-12 webThumbnail">
-						<a href="https://codepen.io/doughty/full/WEjJgX/" target="_blank" class="linkWrap">
+						<a href="https://codepen.io/doughty/full/gxVRXd/" target="_blank" class="linkWrap">
 							<div class="blocker"></div>
-						<iframe class="3image" id="iframe_embed_undefined" name="pen-undefined" src="https://codepen.io/doughty/full/WEjJgX/" allowtransparency="true" frameborder="0" scrolling="no" sandbox="allow-scripts allow-pointer-lock allow-same-origin" style="opacity: 1;"></iframe>
+						<iframe class="3image" id="iframe_embed_undefined" name="pen-undefined" src="https://codepen.io/doughty/full/gxVRXd/" allowtransparency="true" frameborder="0" scrolling="no" sandbox="allow-scripts allow-pointer-lock allow-same-origin" style="opacity: 1;"></iframe>
 						</a>
 					</div>
 				</div>
@@ -272,12 +272,12 @@
 				
 				<div class="col-md-6 col-xs-12">
 					<div class="col-xs-12 portTitle">
-						<a href="https://codepen.io/doughty/full/jLzGKb/" target="_blank">Twitch Stream Status API</a>
+						<a href="https://codepen.io/doughty/full/WEWmYo/" target="_blank">Tic Tac Toe Game</a>
 					</div>
 					<div class="col-xs-12 webThumbnail">
-						<a href="https://codepen.io/doughty/full/jLzGKb/" target="_blank" class="linkWrap">
+						<a href="https://codepen.io/doughty/full/WEWmYo/" target="_blank" class="linkWrap">
 							<div class="blocker"></div>
-						<iframe class="6image" id="iframe_embed_undefined" name="pen-undefined" src="https://codepen.io/doughty/full/jLzGKb/" allowtransparency="true" frameborder="0" scrolling="no" sandbox="allow-scripts allow-pointer-lock allow-same-origin" style="opacity: 1;"></iframe>
+						<iframe class="6image" id="iframe_embed_undefined" name="pen-undefined" src="https://codepen.io/doughty/full/WEWmYo/" allowtransparency="true" frameborder="0" scrolling="no" sandbox="allow-scripts allow-pointer-lock allow-same-origin" style="opacity: 1;"></iframe>
 						</a>
 					</div>
 				</div>
