update about me

--- a/home.html
+++ b/home.html
@@ -76,10 +76,10 @@
 					Hi, my name is Daniel Doughty. I am a Full Stack Developer with a focus in Ruby on Rails. I have been
 					programming since 2015, when I first fell in love with Ruby. Since I have started, I have built two web
 					applications that are currently being used in production. 
-					<p></p>My favorite application is my Shopify App. It connects Shopify 
-					store owners to an automated order fulfillment service.
-					<p></p>My other web application is being used by a $1 billion company that automates their supply chain 
-					communication to the suppliers.
+					<p></p>Of the production/deployed applications I've individually developed, my most recent favorite
+					is a Shopify App. It connects Shopify store owners to an automated order fulfillment service.
+					<p></p>Before that, I built & deployed a web application that is being used by a $1 billion company
+					that automates their supply chain communication between buyers and suppliers.
 				</div>
 			</div>
 		</div>
