add react to site

--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
 		<div class="row bigBox tan">
 			<div class="nameMe col-xs-12 col-md-4 col-md-offset-2 text-center">
 				<h1 id="moveIt">Dan Doughty</h1>
-				<h4>Ruby | Javascript | CSS | HTML</h4>
+				<h4>Ruby | Javascript | CSS | HTML | React.js</h4>
 				<div class="col-xs-12">
 					A Ruby on Rails developer with a Front End Development skillset. 
 				</div>
@@ -121,10 +121,10 @@
 					</div>
 					<div class="col-xs-5 col md-6 bottomPadding">
 						<div class="col-xs-12">
-							<i class="devicon-bootstrap-plain devIcons"></i>
+							<i class="ddevicon-react-original devIcons"></i>
 						</div>
 						<div class="col-xs-12 lightGray">
-							Bootstrap
+							React
 						</div>
 					</div>
 				</div>
