add react to site

--- a/home.html
+++ b/home.html
@@ -121,7 +121,7 @@
 					</div>
 					<div class="col-xs-5 col md-6 bottomPadding">
 						<div class="col-xs-12">
-							<i class="ddevicon-react-original devIcons"></i>
+							<i class="devicon-react-original devIcons"></i>
 						</div>
 						<div class="col-xs-12 lightGray">
 							React
