--- a/home.html
+++ b/home.html
@@ -98,7 +98,7 @@
 						<div class="col-xs-12">
 							<i class="devicon-html5-plain devIcons"></i>
 						</div>
-						<div class="col-xs-12 lightGray">
+						<div class="col-xs-12 lightGray text-center" style="padding: 0px;">
 							HTML 5
 						</div>
 					</div>
